// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Azure Query Rule Alert With Defaults renders an Azure Query Rule Alert with defaults and checks snapshot 1`] = `
"{
  "output": {
    "query_rule_alert_id": {
      "value": "\${azurerm_monitor_scheduled_query_rules_alert_v2.testAzureQueryRuleAlert_queryrulealert_851B0C95.id}"
    }
  },
  "provider": {
    "azurerm": [
      {
        "features": {
        }
      }
    ]
  },
  "resource": {
    "azurerm_monitor_scheduled_query_rules_alert_v2": {
      "testAzureQueryRuleAlert_queryrulealert_851B0C95": {
        "auto_mitigation_enabled": false,
        "criteria": [
          {
            "failing_periods": {
              "minimum_failing_periods_to_trigger_alert": 1,
              "number_of_evaluation_periods": 1
            },
            "operator": "GreaterThan",
            "query": "\\nAppExceptions \\n| where Message has \\"file can not be reloaded\\"\\n",
            "threshold": 100,
            "time_aggregation_method": "Count"
          }
        ],
        "enabled": true,
        "evaluation_frequency": "PT5M",
        "location": "eastus",
        "name": "alert test",
        "resource_group_name": "\${azurerm_resource_group.MyResourceGroup.name}",
        "scopes": [
          "/subscriptions/00000000-0000-0000-0000-000000000000"
        ],
        "severity": 3,
        "skip_query_validation": true,
        "window_duration": "PT30M",
        "workspace_alerts_storage_enabled": false
      }
    },
    "azurerm_resource_group": {
      "MyResourceGroup": {
        "location": "eastus",
        "name": "rg-test"
      }
    }
  },
  "terraform": {
    "required_providers": {
      "azurerm": {
        "source": "azurerm",
        "version": "3.70.0"
      }
    }
  }
}"
`;

exports[`Linux Query Rule Alert Example renders the Query Rule Alert and checks snapshot 1`] = `
{
  "output": {
    "query_rule_alert_id": {
      "value": "\${azurerm_monitor_scheduled_query_rules_alert_v2.queryRuleAlert_queryrulealert_D9160A79.id}",
    },
    "resource_group_name": {
      "value": "\${azurerm_resource_group.rg.name}",
    },
  },
  "provider": {
    "azurerm": [
      {
        "features": {
          "resource_group": {
            "prevent_deletion_if_contains_resources": true,
          },
        },
      },
    ],
  },
  "resource": {
    "azurerm_log_analytics_workspace": {
      "log_analytics": {
        "location": "eastus",
        "name": "la-\${var.name}",
        "resource_group_name": "\${azurerm_resource_group.rg.name}",
      },
    },
    "azurerm_monitor_scheduled_query_rules_alert_v2": {
      "queryRuleAlert_queryrulealert_D9160A79": {
        "auto_mitigation_enabled": false,
        "criteria": [
          {
            "failing_periods": {
              "minimum_failing_periods_to_trigger_alert": 1,
              "number_of_evaluation_periods": 1,
            },
            "operator": "GreaterThan",
            "query": "
AppExceptions 
| where Message has "file can not be reloaded"
",
            "threshold": 100,
            "time_aggregation_method": "Count",
          },
        ],
        "enabled": true,
        "evaluation_frequency": "PT5M",
        "location": "eastus",
        "name": "qra-\${var.name}",
        "resource_group_name": "\${azurerm_resource_group.rg.name}",
        "scopes": [
          "\${azurerm_log_analytics_workspace.log_analytics.id}",
        ],
        "severity": 4,
        "skip_query_validation": true,
        "window_duration": "PT30M",
        "workspace_alerts_storage_enabled": false,
      },
    },
    "azurerm_resource_group": {
      "rg": {
        "location": "eastus",
        "name": "rg-\${var.name}",
        "tags": {
          "test": "test",
        },
      },
    },
  },
  "terraform": {
    "required_providers": {
      "azurerm": {
        "source": "azurerm",
        "version": "3.70.0",
      },
    },
  },
  "variable": {
    "name": {
      "default": "test",
      "description": "System name used to randomize the resources",
      "type": "string",
    },
  },
}
`;
